src/objects/Public_External_Article__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Tab</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>This article type is for public facing knowledge base articles to be seen internally and clients</description>
    <fields>
        <fullName>Article__c</fullName>
        <description>Public facing article.</description>
        <label>Article</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the person who originally supplied the content before it was revised by an Editor.</inlineHelpText>
        <label>Author</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Public_Facing_Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IKM_ID__c</fullName>
        <label>IKM ID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Info__c</fullName>
        <description>Additional internal content. e.g. client facing talking points, common client questions, etc.</description>
        <label>Internal Info</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Nav_Title__c</fullName>
        <label>Nav Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Version__c</fullName>
        <label>Product Version</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Public_Link__c</fullName>
        <formula>HYPERLINK(&apos;https://support.bigcommerce.com/&apos; + UrlName, &apos;https://support.bigcommerce.com/&apos; + UrlName  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Public Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party__c</fullName>
        <inlineHelpText>Specify which third party this article is about if applicable.</inlineHelpText>
        <label>Third Party</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Public/External Article</label>
    <pluralLabel>Public/External Articles</pluralLabel>
</CustomObject>